--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="wish-page" class="page">
         <div class="container">
-            <h1>Happy Belated Birthday, Bestie!</h1>
+            <h1>Happy Belated Birthday, Cutie 𝝅 🍰❤️🥰!</h1>
             <p>Wishing you a stellar day full of joy, love, and cosmic adventures!</p>
             <p>You're my brightest star! 🌟</p>
         </div>
