--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <h1>Happy Belated Birthday, Cutie 𝝅 🍰❤️🥰!</h1>
             <p>Wishing you a stellar day full of joy, love, and cosmic adventures!</p>
-            <p>You're my brightest star! 🌟</p>
+            <p>You're the spark that makes everything brighter! ✨</p>
         </div>
     </div>
     <script src="scripts.js"></script>
